# Erebus

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
assets/presets/: cyberpunk.ron  retro_scifi.ron  synthwave.ron
assets/web/: erebus.d.ts  erebus.js  erebus_bg.wasm.d.ts  index.html
benches/: raymarch.rs
docs/: ARCHITECTURE.md  BUGS.md  ROADMAP.md  SHADER_NOTES.md  USER_MANUAL.md
examples/: headless_export.rs
shaders/: composite.wgsl  fullscreen.wgsl
shaders/bloom/: composite.wgsl  downsample.wgsl  upsample.wgsl
shaders/common/: math.wgsl  noise.wgsl  sampling.wgsl  uniforms.wgsl
shaders/compute/: bake_3d_noise.wgsl  bake_blackbody.wgsl  bake_gradient.wgsl
shaders/nebula/: density.wgsl  lighting.wgsl  raymarch.wgsl
shaders/starfield/: grid_hash.wgsl  psf.wgsl
shaders/tonemap/: aces.wgsl  agx.wgsl  dither.wgsl  reinhard.wgsl  tony_mcmapface.wgsl
src/: lib.rs  main.rs
src/app/: config.rs  mod.rs  state.rs
src/export/: cubemap.rs  equirect.rs  exr.rs  mod.rs  png.rs  tiling.rs  web.rs
src/gui/: mod.rs  panels.rs  theme.rs  widgets.rs
src/noise/: blackbody.rs  blue_noise.rs  mod.rs  seed.rs
src/preset/: io.rs  migrate.rs  mod.rs  schema.rs
src/render/: bench.rs  context.rs  gradient.rs  graph.rs  hot_reload.rs  mod.rs  uniforms.rs
src/render/passes/: bloom.rs  mod.rs  nebula.rs  precompute.rs  starfield.rs  tonemap.rs
src/render/resources/: buffers.rs  mod.rs  samplers.rs  textures.rs
tests/: Retro_Sci_Fi.ron  preset_roundtrip.rs  wgsl_validation.rs
