[package]
name = "erebus"
version = "0.1.0"
edition = "2021"
authors = ["Darian-Frey"]
description = "Procedural volumetric nebula and starfield generator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Darian-Frey/Erebus"
readme = "README.md"
keywords = ["nebula", "starfield", "skybox", "procedural", "wgpu"]
categories = ["graphics", "rendering", "multimedia::images"]

[dependencies]
wgpu = "0.20"
eframe = { version = "0.28", default-features = false, features = ["wgpu", "default_fonts", "wayland", "x11"] }
egui = "0.28"
egui-wgpu = "0.28"
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.27", features = ["bytemuck", "serde"] }
pollster = "0.3"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
exr = "1.72"
rfd = "0.14"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
web-sys = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[[bin]]
name = "erebus"
path = "src/main.rs"
