[package]
name = "erebus"
version = "0.1.0"
edition = "2021"
authors = ["Darian-Frey"]
description = "Procedural volumetric nebula and starfield generator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Darian-Frey/Erebus"
readme = "README.md"
keywords = ["nebula", "starfield", "skybox", "procedural", "wgpu"]
categories = ["graphics", "rendering", "multimedia::images"]

[dependencies]
# Phase 9.5: bumped from wgpu 0.20 / eframe 0.28 because Chrome's WebGPU
# rejected the obsolete `maxInterStageShaderComponents` limit (BUGS.md #9).
# Pinning wgpu to the exact version egui-wgpu 0.30 brings in so the types
# at the eframe ↔ user code boundary unify; otherwise cargo resolves
# 22.0 (eframe internal) and 22.1 (our direct dep) as distinct crates.
wgpu = "23"
eframe = { version = "0.30", default-features = false, features = ["wgpu", "default_fonts", "wayland", "x11"] }
egui = "0.30"
egui-wgpu = "0.30"
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.27", features = ["bytemuck", "serde"] }
pollster = "0.3"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
exr = "1.72"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
# `std::time::Instant` panics on `wasm32-unknown-unknown` ("time not
# implemented on this platform"). `web-time` is a drop-in that uses
# `performance.now()` on wasm and `std::time::Instant` everywhere else.
web-time = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6.1"
rfd = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "HtmlAnchorElement",
    "Window",
    "Document",
    "Element",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }
# `getrandom` needs the `js` feature on wasm to source entropy from the
# browser's `crypto.getRandomValues`. Without this our `rand` calls panic
# at first use.
getrandom = { version = "0.2", features = ["js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[lib]
name = "erebus"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "erebus"
path = "src/main.rs"
